<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/header_bg"
    tools:context=".InfoActivity">

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/logo"
                    android:layout_width="180dp"
                    android:layout_height="180dp"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="50dp"
                    android:src="@drawable/logo_attendance"
                    app:srcCompat="@drawable/logo_attendance" />

            </RelativeLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:textColor="#fff"
                android:textStyle="bold"
                android:textSize="20sp"
                android:textAlignment="center"
                android:text="@string/registrasi"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:textColor="#fff"
                android:textSize="16sp"
                android:textAlignment="center"
                android:text="@string/apakah_benar_data_ini_adalah_anda"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="22dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="70dp"
                        android:layout_height="wrap_content"
                        android:textColor="#fff"
                        android:textSize="16sp"
                        android:text="NIK"/>

                    <TextView
                        android:id="@+id/tv_nik"
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:textColor="#fff"
                        android:textSize="16sp"
                        android:text=": 1601003"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="70dp"
                        android:layout_height="wrap_content"
                        android:textColor="#fff"
                        android:textSize="16sp"
                        android:text="Nama"/>

                    <TextView
                        android:id="@+id/tv_nama"
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:textColor="#fff"
                        android:textSize="16sp"
                        android:text=": Dede Heri"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="70dp"
                        android:layout_height="wrap_content"
                        android:textColor="#fff"
                        android:textSize="16sp"
                        android:text="Divisi"/>

                    <TextView
                        android:id="@+id/tv_divisi"
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:textColor="#fff"
                        android:textSize="16sp"
                        android:text=": Graphic Design"/>

                </LinearLayout>

            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="20dp">

                <Button
                    android:id="@+id/login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="22dp"
                    android:layout_marginRight="22dp"
                    android:background="@drawable/button_outline"
                    android:gravity="center"
                    android:text="@string/lanjutkan"
                    android:textSize="16sp"
                    android:textColor="@android:color/white" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginTop="3.5dp"
                    android:layout_marginRight="50dp"
                    android:src="@drawable/drawable_lanjut"
                    android:layout_alignParentRight="true"/>

            </RelativeLayout>

        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>

</RelativeLayout>